# elsevier_coordinate_extractor

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_STRATEGY.md  DEVELOPMENT_PLAN.md  README.md  pyproject.toml
.github/workflows/: test.yaml
elsevier_coordinate_extraction/: __init__.py  cache.py  client.py  nimads.py  pipeline.py  rate_limits.py  settings.py  table_extraction.py  types.py
elsevier_coordinate_extraction/cli/: __init__.py  inputs.py  main.py  orchestrator.py  outputs.py
elsevier_coordinate_extraction/download/: __init__.py  api.py
elsevier_coordinate_extraction/extract/: __init__.py  coordinates.py  text.py
elsevier_coordinate_extraction/search/: __init__.py  api.py
elsevier_coordinate_extraction/stylesheets/: __init__.py  elsevier_table_extraction.xsl  text_extraction.xsl
evaluation/: process_elsevier_full_text.py
evaluation/data/: elsevier_full_text.jsonl  elsevier_missing_coordinates.jsonl  elsevier_missing_coordinates_clean.jsonl  elsevier_missing_coordinates_neurostore.jsonl  elsevier_missing_coordinates_supplements.jsonl  elsevier_missing_metadata_overlap.jsonl  elsevier_neurostore_crosscheck.jsonl  elsevier_neurostore_crosscheck_v2.jsonl  elsevier_supplements_report.txt  overlap_standard_metadata_only.jsonl
evaluation/scripts/: neurostore_crosscheck.py  neurostore_crosscheck_v2.py  neurostore_crosscheck_v4.py
tests/: conftest.py  test_client.py  test_settings.py  test_table_extraction.py
tests/cassettes/: test_client_fetches_search_results.yaml  test_download_marks_truncated_full_text.yaml  (+5 more)
tests/cli/: test_inputs.py  (+1 more)
(+6 files in other folders)
